--- a/mnis_ver2.0/Views/Graph.xaml
+++ b/mnis_ver2.0/Views/Graph.xaml
@@ -1,15 +1,20 @@
 ﻿<UserControl
-    x:Class="mnis_ver2._0.Views.Graph"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:mnis_ver2._0.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Charting="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
+    x:Class="mnis_ver2._0.Views.Graph"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-    
+
     <Grid>
+
+        <Charting:Chart x:Name="lineGraph" HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch">
+            <Charting:LineSeries Title="Wykres prezentujący działanie filtru" Margin="0" IndependentValuePath="Time" DependentValuePath="Sine" />
+        </Charting:Chart>
 
     </Grid>
 </UserControl>
