--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -14,40 +14,44 @@
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="183*"/>
+            <ColumnDefinition Width="153*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="205*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="0" Grid.Row="0">
+        <StackPanel VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Height="66">
             <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10, 10, 0, 0" TextWrapping="Wrap" Text="Maksymalne tłumienie sygnału w paśmie przenoszenia:" VerticalAlignment="Top"/>
             <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="20, 10, 0, 0" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         </StackPanel>
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="0">
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="0" Height="66">
             <TextBlock x:Name="textBlock" Margin="10, 10, 0, 0" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Minimalne tłumienie sygnału w paśmie zaporowym:" VerticalAlignment="Top"/>
             <TextBox x:Name="textBox3" Margin="20, 10, 0, 0" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="1" Grid.Row="0">
+        <StackPanel VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" Height="66">
             <TextBlock x:Name="textBlock2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Krawędź pasma przenoszenia:"/>
             <TextBox x:Name="textBox2" Margin="10, 10, 0, 0" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         </StackPanel>
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0">
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="66">
             <TextBlock x:Name="textBlock3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Krawędź pasma zaporowego:"/>
             <TextBox x:Name="textBox1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0" Height="23" TextWrapping="Wrap" Width="120"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0">
+        <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Height="66">
             <TextBlock x:Name="textBlock4" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Pulsacja sygnału wejściowego:"/>
             <TextBox x:Name="textBox4" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0" Height="23" TextWrapping="Wrap" Width="120"/>
         </StackPanel>
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0">
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="66">
             <TextBlock x:Name="textBlock5" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Rodzaj filtru:"/>
             <ComboBox x:Name="combo" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0" Width="120"/>
         </StackPanel>
 
         <Views:Graph Grid.Row="1" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <TextBlock x:Name="textBlock6" HorizontalAlignment="Left" Margin="27,617,0,0" Grid.Row="1" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Top" Width="373" Height="13" Grid.Column="3"/>
+        <TextBlock x:Name="textBlock7" Grid.Column="3" HorizontalAlignment="Left" Margin="5,10,0,0" TextWrapping="Wrap" Text="Amplituda:" VerticalAlignment="Top" Height="13" Width="53"/>
+        <TextBox x:Name="textBox5" Grid.Column="3" HorizontalAlignment="Left" Margin="10,34,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="123" Height="32"/>
+        <Button x:Name="button" Content="OK" Grid.Column="3" HorizontalAlignment="Left" Margin="7,88,0,0" VerticalAlignment="Top" Width="130" Height="38"/>
 
     </Grid>
 </Page>
