--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -12,63 +12,48 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="1.25*" />
             <RowDefinition Height="5*" />
             <RowDefinition Height="0.25*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="183*"/>
-            <ColumnDefinition Width="153*"/>
-            <ColumnDefinition Width="142*"/>
-            <ColumnDefinition Width="205*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1.25*"/>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        
-        <StackPanel VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Height="66">
-            <StackPanel.Resources>
-                <ViewModels:FilterViewModel x:Name="MyFilter"/>
-            </StackPanel.Resources>
-            <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10, 10, 0, 0" TextWrapping="Wrap" Text="Maksymalne tłumienie sygnału w paśmie przenoszenia [dB]:" VerticalAlignment="Top"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="alphaPbox" HorizontalAlignment="Left" Margin="20, 10, 0, 0" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding AlphaP, Mode=TwoWay}" TextChanged="alphaPbox_TextChanged"/>
-            </StackPanel>
-            
-        </StackPanel>
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="0" Height="66">
-            <TextBlock x:Name="textBlock" Margin="10, 10, 0, 0" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Minimalne tłumienie sygnału w paśmie zaporowym [dB]:" VerticalAlignment="Top"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="alphaZbox" Margin="20, 10, 0, 0" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding AlphaZ, Mode=TwoWay}" TextChanged="alphaZbox_TextChanged"/>
-            </StackPanel>
+
+        <StackPanel VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Height="66" Orientation="Horizontal">
+            <TextBox Header="Maksymalne tłumienie sygnału w paśmie przenoszenia [dB]:" x:Name="alphaPbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding AlphaP, Mode=TwoWay}" TextChanged="alphaPbox_TextChanged"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" Height="66">
-            <TextBlock x:Name="textBlock2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Krawędź pasma przenoszenia [Hz]:"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="frequencyPbox" Margin="10, 10, 0, 0" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding FrequencyP, Mode=TwoWay}" TextChanged="frequencyPbox_TextChanged"/>
-            </StackPanel>
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="0" Height="66" Orientation="Horizontal">
+            <TextBox Header="Minimalne tłumienie sygnału w paśmie zaporowym [dB]:" x:Name="alphaZbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding AlphaZ, Mode=TwoWay}" TextChanged="alphaZbox_TextChanged"/>
         </StackPanel>
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="66">
-            <TextBlock x:Name="textBlock3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Krawędź pasma zaporowego [Hz]:"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="frequencyZbox" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0" Height="23" TextWrapping="Wrap" Width="120" Text="{Binding FrequencyZ, Mode=TwoWay}" TextChanged="frequencyZbox_TextChanged"/>
-            </StackPanel>
+
+        <StackPanel VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" Height="66" Orientation="Horizontal">
+            <TextBox Header="Krawędź pasma przenoszenia [Hz]:" x:Name="frequencyPbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding FrequencyP, Mode=TwoWay}" TextChanged="frequencyPbox_TextChanged"/>
         </StackPanel>
+
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="66" Orientation="Horizontal">
+            <TextBox Header="Krawędź pasma zaporowego [Hz]:" x:Name="frequencyZbox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding FrequencyZ, Mode=TwoWay}" TextChanged="frequencyZbox_TextChanged"/>
+        </StackPanel>
+
 
         <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Height="66">
-            <TextBlock x:Name="textBlock4" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Pulsacja sygnału wejściowego:"/>
-            <TextBox x:Name="pulsationBox" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0" Height="23" TextWrapping="Wrap" Width="120" TextChanged="pulsationBox_TextChanged"/>
+            <TextBox Header="Pulsacja sygnału wejściowego:"  x:Name="pulsationBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" TextChanged="pulsationBox_TextChanged"/>
         </StackPanel>
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="66">
-            <TextBlock x:Name="textBlock7" HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="Amplituda:" VerticalAlignment="Top"/>
-            <TextBox x:Name="amplitudeBox" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="23" TextChanged="amplitudeBox_TextChanged"/>
-        </StackPanel>
-        
-        <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="66">
-            <TextBlock x:Name="textBlock5" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0, 10, 0, 0" TextWrapping="Wrap" Text="Rodzaj filtru:"/>
-            <ComboBox x:Name="combo" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10, 10, 0, 0" Width="120"/>
-        </StackPanel>
-        <Button x:Name="OkButton" Content="OK" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Bottom" Width="120" Height="40" Click="OkButton_Click"/>
 
-        <Views:Graph x:Name="myGraph" Grid.Row="1" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="66">
+            <TextBox Header="Amplituda:" x:Name="amplitudeBox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" TextChanged="amplitudeBox_TextChanged"/>
+        </StackPanel>
+
+        <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="66">
+            <ComboBox Header="Rodzaj filtru:" x:Name="combo" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        </StackPanel>
+        <Button x:Name="OkButton" Content="OK" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Stretch" Margin="10,10,0,0" VerticalAlignment="Bottom" Width="120" Height="40" Click="OkButton_Click"/>
+
+        <Views:Graph x:Name="myGraph" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,120,0,3" Grid.RowSpan="2"/>
         <TextBlock x:Name="textBlock6" HorizontalAlignment="Left" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="373" Height="13" Grid.Column="3"/>
 
     </Grid>
