--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -35,27 +35,27 @@
             <TextBox Header="Krawędź pasma przenoszenia [Hz]:" x:Name="frequencyPbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding FrequencyP, Mode=TwoWay}" TextChanged="frequencyPbox_TextChanged"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="66" Orientation="Horizontal">
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="auto" Orientation="Horizontal">
             <TextBox Header="Krawędź pasma zaporowego [Hz]:" x:Name="frequencyZbox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding FrequencyZ, Mode=TwoWay}" TextChanged="frequencyZbox_TextChanged"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Height="66">
+        <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Height="Auto">
             <TextBox Header="Pulsacja sygnału wejściowego:"  x:Name="pulsationBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" TextChanged="pulsationBox_TextChanged"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="66">
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="auto">
             <TextBox Header="Amplituda:" x:Name="amplitudeBox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" TextChanged="amplitudeBox_TextChanged"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="66">
+        <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="auto">
             <ComboBox Header="Rodzaj filtru:" x:Name="combo" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
         </StackPanel>
         
         <Button x:Name="OkButton" Content="OK" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Width="120" Height="40" Click="OkButton_Click"/>
 
-        <Views:Graph x:Name="myGraph" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,120,0,3" Grid.RowSpan="2"/>
+        <Views:Graph x:Name="myGraph" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"/>
         
-        <TextBlock x:Name="textBlock6" HorizontalAlignment="Left" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="373" Height="13" Grid.Column="3"/>
+        <TextBlock x:Name="textBlock6" HorizontalAlignment="Right" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="auto" Height="13" Grid.Column="2"/>
 
         <Button x:Name="Help" Grid.Column="0" Grid.Row="2" Click="Help_Click"  Content="Pomoc"/>
     </Grid>
