--- a/mnis_ver2.0/Views/HelpPage.xaml
+++ b/mnis_ver2.0/Views/HelpPage.xaml
@@ -17,13 +17,19 @@
             <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel HorizontalAlignment="Center" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" >
+        <WebView x:Name="webViewControl" Grid.Row="0" Grid.RowSpan="2" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Rectangle x:Name="menuRectangle" PointerEntered="menuRectangle_PointerEntered" PointerExited="menuRectangle_PointerExited" Grid.Column="0" Grid.ColumnSpan="3" Width="auto" Grid.Row="0" Height="auto">
+            
+        </Rectangle>
+        <StackPanel x:Name="menuStack" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" >
             <Button Margin="0, 0, 25, 0" Content="Wstecz" Width="100" Click="Button_Click"></Button>
             <Button Margin="25, 0, 0, 0" Content="Dalej" Width="100" Click="Button_Click_1"></Button>
-        </StackPanel> 
-        
-        <Button Grid.Column="0" HorizontalAlignment="Center" Content="Wróć do programu" Click="Button_Click_2" />
+        </StackPanel>
 
-        <WebView x:Name="webViewControl" Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Button x:Name="backButton" Grid.Column="0" HorizontalAlignment="Center" Content="Wróć do programu" Click="Button_Click_2" />
+
+
+
+        
     </Grid>
 </Page>
