--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -44,7 +44,8 @@
         </StackPanel>
 
         <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="auto">
-            <TextBox Header="Amplituda:" x:Name="amplitudeBox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" TextChanged="amplitudeBox_TextChanged"/>
+            <!--<TextBox Header="Amplituda:" x:Name="amplitudeBox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" TextChanged="amplitudeBox_TextChanged"/>-->
+            <ComboBox x:Name="amplitudeCombo"  Header="Amplituda:" SelectedItem="{Binding Amplitude, Mode=TwoWay}"/>
         </StackPanel>
 
         <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="auto">
