--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -17,47 +17,47 @@
             <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="1.25*"/>
             <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="0.9*"/>
+            <ColumnDefinition Width="0.9*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
         <StackPanel VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Height="66" Orientation="Horizontal">
-            <TextBox Header="Maksymalne tłumienie sygnału w paśmie przenoszenia [dB]:" x:Name="alphaPbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding AlphaP, Mode=TwoWay}" TextChanged="alphaPbox_TextChanged"/>
+            <TextBox Header="Maksymalne tłumienie sygnału w paśmie przenoszenia [dB]:" x:Name="alphaPbox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Text="{Binding AlphaP, Mode=TwoWay}" TextChanged="alphaPbox_TextChanged" Margin="20,0,0,0" Height="60" Width="400"/>
         </StackPanel>
 
         <StackPanel VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="0" Height="66" Orientation="Horizontal">
-            <TextBox Header="Minimalne tłumienie sygnału w paśmie zaporowym [dB]:" x:Name="alphaZbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding AlphaZ, Mode=TwoWay}" TextChanged="alphaZbox_TextChanged"/>
+            <TextBox Header="Minimalne tłumienie sygnału w paśmie zaporowym [dB]:" x:Name="alphaZbox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Text="{Binding AlphaZ, Mode=TwoWay}" TextChanged="alphaZbox_TextChanged" Margin="20,0,0,0" Height="60" Width="400"/>
         </StackPanel>
 
         <StackPanel VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" Height="66" Orientation="Horizontal">
-            <TextBox Header="Krawędź pasma przenoszenia [Hz]:" x:Name="frequencyPbox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding FrequencyP, Mode=TwoWay}" TextChanged="frequencyPbox_TextChanged"/>
+            <TextBox Header="Krawędź pasma przenoszenia [Hz]:" x:Name="frequencyPbox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding FrequencyP, Mode=TwoWay}" TextChanged="frequencyPbox_TextChanged" Width="250" Height="60"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="auto" Orientation="Horizontal">
-            <TextBox Header="Krawędź pasma zaporowego [Hz]:" x:Name="frequencyZbox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding FrequencyZ, Mode=TwoWay}" TextChanged="frequencyZbox_TextChanged"/>
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="0" Height="66" Orientation="Horizontal">
+            <TextBox Header="Krawędź pasma zaporowego [Hz]:" x:Name="frequencyZbox" VerticalAlignment="Center" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding FrequencyZ, Mode=TwoWay}" TextChanged="frequencyZbox_TextChanged" Width="250" Height="60"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Height="Auto">
-            <TextBox Header="Pulsacja sygnału wejściowego:"  x:Name="pulsationBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" TextChanged="pulsationBox_TextChanged"/>
+        <StackPanel VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" Height="66">
+            <TextBox Header="Pulsacja sygnału wejściowego:"  x:Name="pulsationBox" VerticalAlignment="Center" HorizontalAlignment="Left" TextWrapping="Wrap" TextChanged="pulsationBox_TextChanged" Width="250" Height="60"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="auto">
-            <!--<TextBox Header="Amplituda:" x:Name="amplitudeBox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" TextChanged="amplitudeBox_TextChanged"/>-->
-            <ComboBox x:Name="amplitudeCombo"  Header="Amplituda:" SelectedItem="{Binding Amplitude, Mode=TwoWay}"/>
+        <StackPanel VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="0" Height="66">
+            <!-- <TextBox Header="Amplituda:" x:Name="amplitudeBox" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Stretch" TextChanged="amplitudeBox_TextChanged"/> -->
+            <ComboBox x:Name="amplitudeCombo"  Header="Amplituda:" SelectedItem="{Binding Amplitude, Mode=TwoWay}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="250" Height="60"/>
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="auto">
-            <ComboBox Header="Rodzaj filtru:" x:Name="combo" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        <StackPanel VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" Height="66">
+            <ComboBox Header="Rodzaj filtru:" x:Name="combo" VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" Height="60"/>
         </StackPanel>
-        
-        <Button x:Name="OkButton" Content="OK" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Width="120" Height="40" Click="OkButton_Click"/>
+
+        <Button x:Name="OkButton" Content="OK" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="40" Click="OkButton_Click" Margin="-3,100,0,2" Width="150"/>
 
         <Views:Graph x:Name="myGraph" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"/>
-        
-        <TextBlock x:Name="textBlock6" HorizontalAlignment="Right" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="auto" Height="13" Grid.Column="2"/>
 
-        <Button x:Name="Help" Grid.Column="0" Grid.Row="2" Click="Help_Click"  Content="Pomoc"/>
+        <TextBlock x:Name="textBlock6" HorizontalAlignment="Right" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="360" Height="13" Grid.Column="2" Margin="0,22"/>
+
+        <Button x:Name="Help" Grid.Column="0" Grid.Row="2" Click="Help_Click"  Content="Pomoc" Height="38" Margin="0,10,0,9" Width="80"/>
     </Grid>
 </Page>
