--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page MinWidth="400"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:mnis_ver2._0"
@@ -8,9 +8,10 @@
     xmlns:ViewModels="using:mnis_ver2._0.ViewModels"
     x:Class="mnis_ver2._0.MainPage"
     mc:Ignorable="d" Width="Auto">
-
+    
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="1.25*" />
             <RowDefinition Height="5*" />
