--- a/mnis_ver2.0/MainPage.xaml
+++ b/mnis_ver2.0/MainPage.xaml
@@ -10,8 +10,14 @@
     mc:Ignorable="d" Width="Auto">
     
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF0E0D0B" Offset="1"/>
+                <GradientStop Color="#FF285A5F"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="1.25*" />
             <RowDefinition Height="5*" />
@@ -57,7 +63,7 @@
 
         <Views:Graph x:Name="myGraph" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"/>
 
-        <TextBlock x:Name="textBlock6" HorizontalAlignment="Right" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="360" Height="13" Grid.Column="2" Margin="0,22"/>
+        <TextBlock x:Name="textBlock6" HorizontalAlignment="Right" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="© Copyright 2016 Sielicka, Czekalski, Kotlarz, Waberski All Rights Reserved" VerticalAlignment="Center" Width="383" Height="13" Grid.Column="2" Margin="0,22"/>
 
         <Button x:Name="Help" Grid.Column="0" Grid.Row="2" Click="Help_Click"  Content="Pomoc" Height="38" Margin="0,10,0,9" Width="80"/>
     </Grid>
